--- a/JenkinsFile
+++ b/JenkinsFile
@@ -14,6 +14,7 @@ pipeline {
     }
     stage('Build and Test') {
       steps {
+        sh 'sudo su'
         sh 'ls -ltr'
         sh 'cd spring-boot-app && mvn clean package'
       }
