--- a/JenkinsFile
+++ b/JenkinsFile
@@ -9,12 +9,11 @@ pipeline {
     stage('Checkout') {
       steps {
         sh 'echo passed'
-        //git branch: 'main', url: 'https://github.com/pranavdazzler/Java-CICD-Project.git'
+        git branch: 'main', url: 'https://github.com/pranavdazzler/Java-CICD-Project.git'
       }
     }
     stage('Build and Test') {
       steps {
-        sh 'sudo su'
         sh 'ls -ltr'
         sh 'cd spring-boot-app && mvn clean package'
       }
